# agent-basics

./: README.md
01_introduction/: .gitignore  README.md  agent.py  interactive_cli.py  pyproject.toml
01_introduction/artifacts/: meeting_transcript.txt  weather_system_prompt.txt
01_introduction/tools/calculator_tool/: calculator_api.json
01_introduction/tools/research_agent_tool/: research_agent_api.json  research_agent_api.py
01_introduction/tools/weather_tool/: weather_api.json  weather_api.py
agentcore_runtime/01_introduction/: README.md  agent.py  invoke.py  main.py  pyproject.toml  requirements.txt
agentcore_runtime/01_introduction/tools/calculator_tool/: calculator_api.py
agentcore_runtime/02_blueprints/: README.md  cloudformation-template.yaml
