[project]
name = "01-introduction"
version = "0.1.0"
description = "AgentCore Runtime basics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "litellm==1.50.0",  # Older version with better ARM64 support
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[tool.uv]
constraint-dependencies = [
    "huggingface-hub>=1.1.2",
    "tiktoken==0.9.0",  # Force older version with ARM64 wheels
]
override-dependencies = [
    "hf-xet ; python_version < '0'",  # Exclude hf-xet entirely
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.1.32",
]
